# knowlift

./: .gitignore  commitlint.config.mjs  default_settings.py  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  tox.ini  wsgi.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SETUP.md  STYLE_GUIDE.md
knowlift/: __init__.py  db.py  lexicon.py  views.py
knowlift/static/js/: utils.js
knowlift/templates/: about.html  index.html  play.html  result_correct.html
scripts/: init_db.py
src/knowlift/: __init__.py  db.py  number_distance.py  views.py
src/knowlift/application/: __init__.py  interval_count.py
src/knowlift/core/: __init__.py  settings.py
src/knowlift/data/: __init__.py  models.py
src/knowlift/domain/: __init__.py  interval_count_game.py
src/knowlift/templates/: 404.html  500.html  grade.html  legal.html  result_incorrect.html
src/knowlift/web/: __init__.py  connections.py  views.py
src/knowlift/web/static/css/: style.css
src/knowlift/web/static/js/: grade.js
src/knowlift/web/templates/: ladder.html  layout.html
tests/: __init__.py  base.py  factories.py  test_application.py  test_data.py  test_interval_count_game.py  test_models.py  test_number_distance.py  test_scripts.py  test_settings.py  test_web.py
