[project]
name = "knowlift"
version = "2.1.0"
description = "Interactive games designed to enhance cognitive skills"
readme = "docs/README.md"
requires-python = ">=3.12,<3.15"

dependencies = [
    "flask==3.1.2",
    "sqlalchemy==2.0.46",
]

[dependency-groups]
dev = [
    "coverage==7.12.0",
    "ruff==0.14.7",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 79 # same as PEP8

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "E", # pycodestyle-error
    "F", # pyflakes
    "I", # isort
    "LOG", # flake8-logging
    "N", # pep8-naming
    "W", # pycodestyle-warning
]

[tool.ruff.lint.isort]
force-single-line = true
